# DNS-FUZZER

./: README.md  pyproject.toml
src/dnsfuzzer/: __init__.py  __main__.py  cli.py  constants.py  exceptions.py
src/dnsfuzzer/analyze/: __init__.py  compare.py  config.py  server.py
src/dnsfuzzer/auth/: __init__.py  config.py  server.py
src/dnsfuzzer/client/: __init__.py  analyze_interface.py  client.py  config.py
src/dnsfuzzer/core/: __init__.py  config.py  mutator.py  query.py
src/dnsfuzzer/strategies/: __init__.py  base.py  basic.py  header.py  logical.py  logical_record.py  record.py
src/dnsfuzzer/utils/: __init__.py  logger.py
test/: __init__.py  test_config.py  test_mutator.py  test_query.py  test_strategies.py
